-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.2.0-beta
-
Windows Vista 64bit
-
76212f67b0eafa86c082e7090497625436fe6c52
Steps to reproduce:
- Open SameGame demo, put breakpoint in startNewGame() (as in test matrix)
- Run, click 'Start' on Game, debugger breaks
- On variable row in locals view, choose Watch Expression over variable 'row'
- Note that watcher shows up as @<address>->row with value 'Syntax error'
Log:
dJSDebugger sending EXEC watch.0 @2e470c0->row
dJSDebugger sending WATCH_EXPRESSIONS @2e470c0->row
dJSDebugger receiving RESULT watch.0 SyntaxError: Parse error
sStopped.
dJSDebugger sending EXEC watch.1 @2e470c0->column
dJSDebugger sending WATCH_EXPRESSIONS @2e470c0->column, @2e470c0->row
dJSDebugger receiving RESULT watch.1 SyntaxError: Parse error
dJSDebugger sending CONTINUE