QmlDebugger: removed prefix in expression for locals

Task-number: QTCREATORBUG-4462
Reviewed-by: Kai Koehne